refactor: modernize stream terminals and collection access